--- a/sofascore/templates/sofascore/main.html
+++ b/sofascore/templates/sofascore/main.html
@@ -1,5 +1,8 @@
-<head><script src="https://code.jquery.com/jquery-3.1.1.js"></script></head>
-<body style="background-color: #0d0d0d; color: #ffffff">
+<!doctype html>
+<html>
+<head><script src="https://code.jquery.com/jquery-3.1.1.js"></script>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/></head>
+<body style="background-color: #0d0d0d; color: #ffffff; font-size: 16px">
 	<script type="text/javascript">
 
 		updater = function(data){
@@ -17,12 +20,7 @@
 		};
 
 		ssmgData = function(data){
-			for (let i in data){$('#'+String(i)+' '+'#'+'ssmg').append(data[i]) }
-			
-
-			
-				
-						
+			for (let i in data){$('#'+String(i)+' '+'#'+'ssmg').text(data[i]+'%')}																
 		};
 
 
@@ -30,28 +28,48 @@
 		f2 = function() {$.getJSON( "http://127.0.0.1:8000/sofascore/preds_package",ssmgData)};
 		$(function () {setInterval(f, 20000) } );
 		$(function () {setInterval(f2, 50000) } );
-		setTimeout(window.location.reload.bind(window.location), 120000);
+		setTimeout(window.location.reload.bind(window.location), 300000);
 	</script>
-<div>
- <ul>
+<div class='container-fluid'>
+	<!-- <p style='position: fixed;top: 150px;right: 600px'>SSMG -- second set more gems<br />chances for more gems in second set in %<br />using support vector machine with linear kernel</p> -->
+	<p style='position: fixed; left: 1000px; top: 200px'>SSMG -- second set more gems<br />chances for more gems in second set in %<br />using support vector machine with linear kernel</p>
+	<svg width="100%" height="100%" style='position: fixed ;right: 30px'>
+	  <line x1="45.5%" y1="0%" x2="58%" y2="100%" style="stroke:white;stroke-width:2"  />
+	  <line x1="44.5%" y1="0%" x2="60%" y2="100%" style="stroke:white;stroke-width:2"  />
+	  <line x1="43%" y1="0%" x2="63%" y2="100%" style="stroke:white;stroke-width:2"  />
+	  <line x1="41%" y1="0%" x2="67%" y2="100%" style="stroke:white;stroke-width:2"  />
+	  <line x1="38.5%" y1="0%" x2="72%" y2="100%" style="stroke:white;stroke-width:2"  />
+	</svg>
+
+ 
     {% for event in eventList %}
-        <li id={{event.event_id}}><p>{{event.formatedStartDate}}
-        	<span>{{event.homeTeam_name}}</span>
-        	<span id='current_home'>{{event.current_home}}</span>
-        	<span id='period1_home'>{{event.period1_home}}</span>
-        	<span id='period2_home'>{{event.period2_home}}</span>
-        	<span id='period3_home'>{{event.period3_home}}</span>
-        	<span id='ssmg'>--------{{event.tennis_ssmg}}</span>
-       		</p>
-       		<p>---------------
-        	<span>{{event.awayTeam_name}}</span>
-        	<span id='current_away'>{{event.current_away}}</span>
-        	<span id='period1_away'>{{event.period1_away}}</span>
-        	<span id='period2_away'>{{event.period2_away}}</span>
-        	<span id='period3_away'>{{event.period3_away}}</span>
-       		</p>
-       		</li>
+        <div id={{event.event_id}}><div class='row'>
+        	<div class="col-xs-1 text-right">{{event.formatedStartDate}}</div>
+        	<div class="col-xs-2 text-right">{{event.homeTeam_name}}</div>
+        	<div class="col-xs-1">
+        	<span  id='current_home' style='padding-right:20px'>{{event.current_home}}
+        	</span>
+        	<span  id='period1_home'>{{event.period1_home}}</span>
+        	<span  id='period2_home'>{{event.period2_home}}</span>
+        	<span  id='period3_home'>{{event.period3_home}}</span>
+        	</div>
+        	<div class="col-xs-1 text-left" id='ssmg'>{{event.tennis_ssmg}}%</div>
+       		</div>
+       		<div class='row'>
+        	<div class="col-xs-3 text-right">{{event.awayTeam_name}}</div>
+        	<div class="col-xs-1">
+        	<span  id='current_away' style='padding-right:20px'>{{event.current_away}}
+        	</span>
+        	<span  id='period1_away'>{{event.period1_away}}</span>
+        	<span  id='period2_away'>{{event.period2_away}}</span>
+        	<span  id='period3_away'>{{event.period3_away}}</span>
+        	</div>
+       		</div>
+       		<br />
+       	</div>
+       		
     {% endfor %}
-</ul>
+
 </div>
 </body>
+</html>
